feat: add refactored yatzy 1 2 and 3 with improved tests